--- a/package.json
+++ b/package.json
@@ -5,19 +5,19 @@
   "homepage": "https://weather-app-846.herokuapp.com/",
   "dependencies": {
     "@mars/heroku-js-runtime-env": "^3.0.2",
-    "@material-ui/core": "^4.9.2",
+    "@material-ui/core": "^4.9.12",
     "axios": "^0.19.2",
-    "connected-react-router": "^6.7.0",
+    "connected-react-router": "^6.8.0",
+    "dayjs": "^1.8.26",
     "history": "^4.10.1",
-    "moment": "^2.24.0",
-    "react": "^16.12.0",
-    "react-dom": "^16.12.0",
-    "react-redux": "^7.1.3",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
+    "react-redux": "^7.2.0",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.3.1",
+    "react-scripts": "3.4.1",
     "redux": "^4.0.5",
     "redux-saga": "^1.1.3",
-    "styled-components": "^5.0.1"
+    "styled-components": "^5.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
