--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "weather-app",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://weather-app-846.herokuapp.com/",
+  "homepage": "https://phatnguyenuit.github.io/weather-app/",
   "dependencies": {
     "@mars/heroku-js-runtime-env": "^3.0.2",
     "@material-ui/core": "^4.9.12",
@@ -36,5 +36,7 @@
     "not ie <= 11",
     "not op_mini all"
   ],
-  "devDependencies": {}
+  "engines": {
+    "node": "10.x"
+  }
 }
