--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "weather-app",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://phatnguyenuit.github.io/weather-app/",
+  "homepage": "https://weather-app-846.herokuapp.com/",
   "dependencies": {
     "@mars/heroku-js-runtime-env": "^3.0.2",
     "@material-ui/core": "^4.9.12",
