--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
   "eslintConfig": {
     "extends": "react-app"
   },
+  "devDependencies": {},
   "browserslist": [
     ">0.2%",
     "not dead",
